COMPLETE - App level localization

--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -17,10 +17,12 @@
   "allTorrents": "Alle Torrents",
   "anErrorOccurred": "Ein Fehler ist aufgetreten",
   "analytics": "Analytik",
+  "andFiles": " und Dateien",
   "appName": "qBitConnect",
   "appTitle": "qBitConnect",
   "applyFilter": "Filter anwenden",
   "areYouSureDeleteServer": "Sind Sie sicher, dass Sie löschen möchten",
+  "areYouSureDeleteTorrents": "Sind Sie sicher, dass Sie {count} Torrent(s) löschen möchten?",
   "authenticationRequired": "Authentifizierung erforderlich",
   "authenticationRequiredMessage": "Diese qBittorrent-Instanz erfordert Authentifizierung. Bitte geben Sie Benutzername und Passwort an.",
   "autoTmm": "Auto TMM",
@@ -41,7 +43,8 @@
   "checkingConnection": "Verbindung wird überprüft...",
   "chooseLanguage": "Sprache wählen",
   "chooseTheme": "Design wählen",
-  "chooseWhatToDelete": "Wählen Sie aus, was gelöscht werden soll.",
+  "chooseWhatToDelete": "Wählen Sie aus, was gelöscht werden soll:",
+  "collectingData": "Daten werden gesammelt...",
   "comment": "Kommentar",
   "completed": "Abgeschlossen",
   "completedTorrents": "Abgeschlossene Torrents",
@@ -64,17 +67,24 @@
   "customizeTorrentCardInfo": "Torrent-Karten-Info anpassen",
   "darkTheme": "Dunkles Design",
   "darkThemeDescription": "Komfortables dunkles Design mit gutem Kontrast",
+  "dataTransfer": "Datenübertragung",
   "defaultStatusFilter": "Standard-Statusfilter",
   "delete": "Löschen",
   "deleteLastServer": "Letzten Server löschen",
+  "deleteOperationFailed": "Löschvorgang fehlgeschlagen",
+  "deleteOptions": "Löschoptionen",
   "deleteServer": "Server löschen",
   "deleteTorrent": "Torrent löschen",
+  "deleteTorrents": "Torrents löschen",
   "deleted": "gelöscht",
+  "deletingTorrents": "Torrents werden gelöscht...",
   "disconnect": "Trennen",
   "disconnectFirstToDelete": "Zuerst trennen, um zu löschen",
   "doNotDownload": "Nicht herunterladen",
   "dontCreateSubfolder": "Keinen Unterordner erstellen",
+  "download": "Download",
   "downloadFirstLast": "Erste und letzte Teile zuerst herunterladen",
+  "downloadProgress": "Download-Fortschritt",
   "downloadLimit": "Download-Limit",
   "downloadSequential": "In sequenzieller Reihenfolge herunterladen",
   "downloadSpeed": "Download-Geschwindigkeit",
@@ -166,6 +176,8 @@
   "noNetworkConnection": "Keine Netzwerkverbindung verfügbar. Bitte überprüfen Sie Ihre Internetverbindung und versuchen Sie es erneut.",
   "noOptionsSelected": "Keine Optionen ausgewählt",
   "noServers": "Keine Server",
+  "noServersAvailable": "Keine Server verfügbar",
+  "noStatsDataAvailable": "Keine Statistiken verfügbar",
   "noTorrentsFound": "Keine Torrents gefunden",
   "noTorrentsMatchSearch": "Keine Torrents entsprechen Ihrer Suche",
   "none": "Keine",
@@ -175,6 +187,7 @@
   "ok": "OK",
   "oledTheme": "OLED Design",
   "oledThemeDescription": "Echtes schwarzes Design für OLED-Displays",
+  "operationFailed": "Operation fehlgeschlagen",
   "original": "Original",
   "overview": "Übersicht",
   "password": "Passwort",
@@ -182,12 +195,14 @@
   "pathOptional": "Pfad (optional)",
   "pause": "Pausieren",
   "paused": "Pausiert",
+  "pending": "Ausstehend",
   "pausedTorrents": "Pausierte Torrents",
   "peakDownloadSpeed": "Höchste Download-Geschwindigkeit",
   "peakUploadSpeed": "Höchste Upload-Geschwindigkeit",
   "peers": "Peers",
   "peersConnected": "Verbundene Peers",
   "performanceMetrics": "Leistungsmetriken",
+  "performingOperation": "{operation}-Operation wird ausgeführt...",
   "pieceSize": "Teilgröße",
   "pieces": "Teile",
   "pleaseEnterAtLeastOneUrl": "Bitte geben Sie mindestens eine URL ein",
@@ -203,6 +218,7 @@
   "qbittorrentVersion": "qBittorrent",
   "queued": "In Warteschlange",
   "queuedIoJobs": "Warteschlangen-I/O-Jobs",
+  "quickStats": "Schnellstatistiken",
   "ratio": "Ratio",
   "readCacheHits": "Lese-Cache-Treffer",
   "readCacheOverload": "Lese-Cache-Überlastung",
@@ -231,7 +247,9 @@
   "seeds": "Seeds",
   "select": "Auswählen",
   "selectAll": "Alle auswählen",
+  "selectReplacementServer": "Ersatzserver auswählen",
   "selectUpToOptionsToDisplay": "Wählen Sie bis zu {max} Optionen aus, die in Torrent-Karten angezeigt werden sollen. Aktuell ausgewählt: {current}/{max}",
+  "selectedServerNotAvailable": "Ausgewählter Server ist nicht verfügbar. Bitte wählen Sie einen anderen Server.",
   "sequentialDownload": "Sequenzieller Download",
   "serverDeleted": "gelöscht",
   "serverDeletedReplacementSet": "gelöscht. als Auto-Verbindung festgelegt",
@@ -239,6 +257,7 @@
   "serverName": "Servername",
   "serverNameHint": "z.B., Heim-NAS",
   "serverNameOptional": "Server-Name (optional)",
+  "serverSetAsAutoConnect": "ist als Auto-Connect gesetzt. Bitte wählen Sie einen Ersatzserver vor dem Löschen:",
   "servers": "Server",
   "sessionWaste": "Session-Verschwendung",
   "setAsAutoConnect": "Als Auto-Verbindung festlegen",
@@ -263,6 +282,7 @@
   "showsTotalUploadedData": "Zeigt insgesamt hochgeladene Daten",
   "showsUploadDownloadRatio": "Zeigt Upload/Download-Verhältnis",
   "size": "Größe",
+  "skip": "Überspringen",
   "skipHashCheck": "Hash-Überprüfung überspringen",
   "sort": "Sortieren",
   "sortAndFilter": "Sortieren & Filtern",
@@ -280,6 +300,10 @@
   "stopCondition": "Stopp-Bedingung",
   "success": "Erfolg",
   "successfullyAddedTorrents": "Torrent(s) erfolgreich hinzugefügt",
+  "successfullyDeleted": "Erfolgreich {count} Torrents gelöscht",
+  "successfullyPaused": "Erfolgreich {count} Torrents pausiert",
+  "successfullyResumed": "Erfolgreich {count} Torrents fortgesetzt",
+  "switchServer": "Server wechseln",
   "systemTheme": "System Design",
   "systemThemeDescription": "Folgt dem Systemdesign Ihres Geräts",
   "tags": "Tags",
@@ -288,7 +312,9 @@
   "technicalInformation": "Technische Informationen",
   "termsConditions": "Geschäftsbedingungen",
   "theme": "Design",
+  "thisActionCannotBeUndone": "Diese Aktion kann nicht rückgängig gemacht werden.",
   "tier": "Stufe",
+  "timeActive": "Aktive Zeit",
   "timeElapsed": "Verstrichene Zeit",
   "timeline": "Zeitlinie",
   "torrentAndFiles": "Torrent + Dateien",
@@ -319,6 +345,7 @@
   "totalWasted": "Gesamt verschwendet",
   "tracker": "Tracker",
   "trackers": "Tracker",
+  "transferInfo": "Transfer-Informationen",
   "transferInformation": "Übertragungsinformationen",
   "transferSpeeds": "Übertragungsgeschwindigkeiten",
   "transferStatistics": "Übertragungsstatistiken",
@@ -326,6 +353,7 @@
   "unknown": "Unbekannt",
   "unlimited": "Unbegrenzt",
   "update": "Aktualisieren",
+  "upload": "Upload",
   "uploadLimit": "Upload-Limit",
   "uploadSpeed": "Upload-Geschwindigkeit",
   "uploadSpeedAvg": "Upload-Geschwindigkeit (Durchschn.)",
