--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -18,10 +18,12 @@
   "allTorrents": "All Torrents",
   "anErrorOccurred": "An error occurred",
   "analytics": "Analytics",
+  "andFiles": " and files",
   "appName": "qBitConnect",
   "appTitle": "qBitConnect",
   "applyFilter": "Apply Filter",
   "areYouSureDeleteServer": "Are you sure you want to delete",
+  "areYouSureDeleteTorrents": "Are you sure you want to delete {count} torrent(s)?",
   "authenticationRequired": "Authentication required",
   "authenticationRequiredMessage": "This qBittorrent instance requires authentication. Please provide username and password.",
   "autoTmm": "Auto TMM",
@@ -43,6 +45,7 @@
   "chooseLanguage": "Choose Language",
   "chooseTheme": "Choose Theme",
   "chooseWhatToDelete": "Choose what to delete.",
+  "collectingData": "Collecting data...",
   "comment": "Comment",
   "completed": "Completed",
   "completedTorrents": "Completed Torrents",
@@ -65,17 +68,24 @@
   "customizeTorrentCardInfo": "Customize Torrent Card Info",
   "darkTheme": "Dark Theme",
   "darkThemeDescription": "Comfortable dark theme with good contrast",
+  "dataTransfer": "Data Transfer",
   "defaultStatusFilter": "Default Status Filter",
   "delete": "Delete",
   "deleteLastServer": "Delete Last Server",
+  "deleteOperationFailed": "Delete operation failed",
+  "deleteOptions": "Delete Options",
   "deleteServer": "Delete Server",
   "deleteTorrent": "Delete Torrent",
+  "deleteTorrents": "Delete Torrents",
   "deleted": "deleted",
+  "deletingTorrents": "Deleting torrents...",
   "disconnect": "Disconnect",
   "disconnectFirstToDelete": "Disconnect first to delete",
   "doNotDownload": "Do not download",
   "dontCreateSubfolder": "Don't create subfolder",
+  "download": "Download",
   "downloadFirstLast": "Download first and last pieces first",
+  "downloadProgress": "Download Progress",
   "downloadLimit": "Download Limit",
   "downloadSequential": "Download in sequential order",
   "downloadSpeed": "Download Speed",
@@ -167,6 +177,8 @@
   "noNetworkConnection": "No network connection available. Please check your internet connection and try again.",
   "noOptionsSelected": "No options selected",
   "noServers": "No Servers",
+  "noServersAvailable": "No servers available",
+  "noStatsDataAvailable": "No stats data available",
   "noTorrentsFound": "No torrents found",
   "noTorrentsMatchSearch": "No torrents match your search",
   "none": "None",
@@ -176,6 +188,7 @@
   "ok": "OK",
   "oledTheme": "OLED Theme",
   "oledThemeDescription": "True black theme for OLED displays",
+  "operationFailed": "Operation failed",
   "original": "Original",
   "overview": "Overview",
   "password": "Password",
@@ -183,12 +196,14 @@
   "pathOptional": "Path (optional)",
   "pause": "Pause",
   "paused": "Paused",
+  "pending": "Pending",
   "pausedTorrents": "Paused Torrents",
   "peakDownloadSpeed": "Peak Download Speed",
   "peakUploadSpeed": "Peak Upload Speed",
   "peers": "Peers",
   "peersConnected": "Peers Connected",
   "performanceMetrics": "Performance Metrics",
+  "performingOperation": "Performing {operation} operation...",
   "pieceSize": "Piece Size",
   "pieces": "Pieces",
   "pleaseEnterAtLeastOneUrl": "Please enter at least one URL",
@@ -204,6 +219,7 @@
   "qbittorrentVersion": "qBittorrent",
   "queued": "Queued",
   "queuedIoJobs": "Queued I/O Jobs",
+  "quickStats": "Quick Stats",
   "ratio": "Ratio",
   "readCacheHits": "Read Cache Hits",
   "readCacheOverload": "Read Cache Overload",
@@ -232,7 +248,9 @@
   "seeds": "Seeds",
   "select": "Select",
   "selectAll": "Select All",
+  "selectReplacementServer": "Select Replacement Server",
   "selectUpToOptionsToDisplay": "Select up to {max} options to display in torrent cards. Currently selected: {current}/{max}",
+  "selectedServerNotAvailable": "Selected server is not available. Please select another server.",
   "sequentialDownload": "Sequential Download",
   "serverDeleted": "deleted",
   "serverDeletedReplacementSet": "deleted. set as auto-connect",
@@ -240,6 +258,7 @@
   "serverName": "Server Name",
   "serverNameHint": "e.g., Home NAS",
   "serverNameOptional": "Server name (optional)",
+  "serverSetAsAutoConnect": "is set as auto-connect. Please select a replacement server before deleting:",
   "servers": "Servers",
   "sessionWaste": "Session Waste",
   "setAsAutoConnect": "Set as Auto-Connect",
@@ -264,6 +283,7 @@
   "showsTotalUploadedData": "Shows total uploaded data",
   "showsUploadDownloadRatio": "Shows upload/download ratio",
   "size": "Size",
+  "skip": "Skip",
   "skipHashCheck": "Skip hash check",
   "sort": "Sort",
   "sortAndFilter": "Sort & Filter",
@@ -281,6 +301,10 @@
   "stopCondition": "Stop condition",
   "success": "Success",
   "successfullyAddedTorrents": "Successfully added torrent(s)",
+  "successfullyDeleted": "Successfully deleted {count} torrents",
+  "successfullyPaused": "Successfully paused {count} torrents",
+  "successfullyResumed": "Successfully resumed {count} torrents",
+  "switchServer": "Switch Server",
   "systemTheme": "System Theme",
   "systemThemeDescription": "Follows your device's system theme",
   "tags": "Tags",
@@ -289,7 +313,9 @@
   "technicalInformation": "Technical Information",
   "termsConditions": "Terms & Conditions",
   "theme": "Theme",
+  "thisActionCannotBeUndone": "This action cannot be undone.",
   "tier": "Tier",
+  "timeActive": "Time Active",
   "timeElapsed": "Time Elapsed",
   "timeline": "Timeline",
   "torrentAndFiles": "Torrent + files",
@@ -303,7 +329,7 @@
   "torrentMovedToBottomOfQueue": "Torrent moved to bottom of queue",
   "torrentMovedToTopOfQueue": "Torrent moved to top of queue",
   "torrentMovedUpInQueue": "Torrent moved up in queue",
-  "torrentOnly": "Torrent only",
+  "torrentOnly": "Torrent Only",
   "torrentOptions": "Torrent Options",
   "torrentRecheckStarted": "Torrent recheck started",
   "torrentRenamedSuccessfully": "Torrent renamed successfully",
@@ -320,6 +346,7 @@
   "totalWasted": "Total Wasted",
   "tracker": "Tracker",
   "trackers": "Trackers",
+  "transferInfo": "Transfer Info",
   "transferInformation": "Transfer Information",
   "transferSpeeds": "Transfer Speeds",
   "transferStatistics": "Transfer Statistics",
@@ -327,6 +354,7 @@
   "unknown": "Unknown",
   "unlimited": "Unlimited",
   "update": "Update",
+  "upload": "Upload",
   "uploadLimit": "Upload Limit",
   "uploadSpeed": "Upload Speed",
   "uploadSpeedAvg": "Upload Speed (Avg)",
