--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -17,10 +17,12 @@
   "allTorrents": "Todos los Torrents",
   "anErrorOccurred": "Ocurrió un error",
   "analytics": "Analíticas",
+  "andFiles": " y archivos",
   "appName": "qBitConnect",
   "appTitle": "qBitConnect",
   "applyFilter": "Aplicar Filtro",
   "areYouSureDeleteServer": "¿Estás seguro de que quieres eliminar",
+  "areYouSureDeleteTorrents": "¿Estás seguro de que quieres eliminar {count} torrent(s)?",
   "authenticationRequired": "Autenticación requerida",
   "authenticationRequiredMessage": "Esta instancia de qBittorrent requiere autenticación. Por favor proporciona nombre de usuario y contraseña.",
   "autoTmm": "Auto TMM",
@@ -41,7 +43,8 @@
   "checkingConnection": "Verificando conexión...",
   "chooseLanguage": "Elegir Idioma",
   "chooseTheme": "Elegir Tema",
-  "chooseWhatToDelete": "Elige qué eliminar.",
+  "chooseWhatToDelete": "Elige qué eliminar:",
+  "collectingData": "Recolectando datos...",
   "comment": "Comentario",
   "completed": "Completado",
   "completedTorrents": "Torrents Completados",
@@ -64,17 +67,24 @@
   "customizeTorrentCardInfo": "Personalizar Información de Tarjeta de Torrent",
   "darkTheme": "Tema Oscuro",
   "darkThemeDescription": "Tema oscuro cómodo con buen contraste",
+  "dataTransfer": "Transferencia de Datos",
   "defaultStatusFilter": "Filtro de Estado Predeterminado",
   "delete": "Eliminar",
   "deleteLastServer": "Eliminar Último Servidor",
+  "deleteOperationFailed": "Operación de eliminación falló",
+  "deleteOptions": "Opciones de Eliminación",
   "deleteServer": "Eliminar Servidor",
   "deleteTorrent": "Eliminar Torrent",
+  "deleteTorrents": "Eliminar Torrents",
   "deleted": "eliminado",
+  "deletingTorrents": "Eliminando torrents...",
   "disconnect": "Desconectar",
   "disconnectFirstToDelete": "Desconectar primero para eliminar",
   "doNotDownload": "No descargar",
   "dontCreateSubfolder": "No crear subcarpeta",
+  "download": "Descarga",
   "downloadFirstLast": "Descargar primero y último fragmentos primero",
+  "downloadProgress": "Progreso de Descarga",
   "downloadLimit": "Límite de Descarga",
   "downloadSequential": "Descargar en orden secuencial",
   "downloadSpeed": "Velocidad de Descarga",
@@ -147,7 +157,7 @@
   "limitUploadRate": "Limitar velocidad de subida",
   "loading": "Cargando...",
   "logs": "Registros",
-  "manageServers": "Gestionar Servidores",
+  "manageServers": "Administrar Servidores",
   "manual": "Manual",
   "maximum": "Máximo",
   "maximumOptionsCanBeSelected": "Se pueden seleccionar un máximo de {max} opciones",
@@ -166,6 +176,8 @@
   "noNetworkConnection": "No hay conexión de red disponible. Por favor verifica tu conexión a internet e inténtalo de nuevo.",
   "noOptionsSelected": "No hay opciones seleccionadas",
   "noServers": "Sin Servidores",
+  "noServersAvailable": "No hay servidores disponibles",
+  "noStatsDataAvailable": "No hay datos de estadísticas disponibles",
   "noTorrentsFound": "No se encontraron torrents",
   "noTorrentsMatchSearch": "Ningún torrent coincide con tu búsqueda",
   "none": "Ninguno",
@@ -175,6 +187,7 @@
   "ok": "OK",
   "oledTheme": "Tema OLED",
   "oledThemeDescription": "Tema negro verdadero para pantallas OLED",
+  "operationFailed": "Operación falló",
   "original": "Original",
   "overview": "Resumen",
   "password": "Contraseña",
@@ -182,12 +195,14 @@
   "pathOptional": "Ruta (opcional)",
   "pause": "Pausar",
   "paused": "Pausado",
+  "pending": "Pendiente",
   "pausedTorrents": "Torrents Pausados",
   "peakDownloadSpeed": "Velocidad Máxima de Descarga",
   "peakUploadSpeed": "Velocidad Máxima de Subida",
   "peers": "Peers",
   "peersConnected": "Peers Conectados",
   "performanceMetrics": "Métricas de Rendimiento",
+  "performingOperation": "Ejecutando operación {operation}...",
   "pieceSize": "Tamaño de Pieza",
   "pieces": "Piezas",
   "pleaseEnterAtLeastOneUrl": "Por favor ingrese al menos una URL",
@@ -203,6 +218,7 @@
   "qbittorrentVersion": "qBittorrent",
   "queued": "En Cola",
   "queuedIoJobs": "Trabajos I/O en Cola",
+  "quickStats": "Estadísticas Rápidas",
   "ratio": "Ratio",
   "readCacheHits": "Aciertos de Cache de Lectura",
   "readCacheOverload": "Sobrecarga de Cache de Lectura",
@@ -231,7 +247,9 @@
   "seeds": "Seeds",
   "select": "Seleccionar",
   "selectAll": "Seleccionar Todo",
+  "selectReplacementServer": "Seleccionar Servidor de Reemplazo",
   "selectUpToOptionsToDisplay": "Selecciona hasta {max} opciones para mostrar en las tarjetas de torrent. Actualmente seleccionado: {current}/{max}",
+  "selectedServerNotAvailable": "El servidor seleccionado no está disponible. Por favor selecciona otro servidor.",
   "sequentialDownload": "Descarga Secuencial",
   "serverDeleted": "eliminado",
   "serverDeletedReplacementSet": "eliminado. establecido como auto-conectar",
@@ -239,6 +257,7 @@
   "serverName": "Nombre del Servidor",
   "serverNameHint": "ej., NAS de casa",
   "serverNameOptional": "Nombre del servidor (opcional)",
+  "serverSetAsAutoConnect": "está configurado como auto-conectar. Por favor selecciona un servidor de reemplazo antes de eliminar:",
   "servers": "Servidores",
   "sessionWaste": "Desperdicio de Sesión",
   "setAsAutoConnect": "Establecer como Auto-Conectar",
@@ -263,6 +282,7 @@
   "showsTotalUploadedData": "Muestra los datos totales subidos",
   "showsUploadDownloadRatio": "Muestra la proporción de subida/descarga",
   "size": "Tamaño",
+  "skip": "Omitir",
   "skipHashCheck": "Omitir verificación hash",
   "sort": "Ordenar",
   "sortAndFilter": "Ordenar y Filtrar",
@@ -280,6 +300,10 @@
   "stopCondition": "Condición de parada",
   "success": "Éxito",
   "successfullyAddedTorrents": "Torrent(s) agregado(s) exitosamente",
+  "successfullyDeleted": "Eliminados exitosamente {count} torrents",
+  "successfullyPaused": "Pausados exitosamente {count} torrents",
+  "successfullyResumed": "Reanudados exitosamente {count} torrents",
+  "switchServer": "Cambiar Servidor",
   "systemTheme": "Tema del Sistema",
   "systemThemeDescription": "Sigue el tema del sistema de tu dispositivo",
   "tags": "Etiquetas",
@@ -288,7 +312,9 @@
   "technicalInformation": "Información Técnica",
   "termsConditions": "Términos y Condiciones",
   "theme": "Tema",
+  "thisActionCannotBeUndone": "Esta acción no se puede deshacer.",
   "tier": "Nivel",
+  "timeActive": "Tiempo Activo",
   "timeElapsed": "Tiempo Transcurrido",
   "timeline": "Línea de Tiempo",
   "torrentAndFiles": "Torrent + archivos",
@@ -302,7 +328,7 @@
   "torrentMovedToBottomOfQueue": "Torrent movido al final de la cola",
   "torrentMovedToTopOfQueue": "Torrent movido al principio de la cola",
   "torrentMovedUpInQueue": "Torrent movido hacia arriba en la cola",
-  "torrentOnly": "Solo torrent",
+  "torrentOnly": "Solo Torrent",
   "torrentOptions": "Opciones de Torrent",
   "torrentRecheckStarted": "Verificación de torrent iniciada",
   "torrentRenamedSuccessfully": "Torrent renombrado exitosamente",
@@ -319,6 +345,7 @@
   "totalWasted": "Total Desperdiciado",
   "tracker": "Tracker",
   "trackers": "Trackers",
+  "transferInfo": "Información de Transferencia",
   "transferInformation": "Información de Transferencia",
   "transferSpeeds": "Velocidades de Transferencia",
   "transferStatistics": "Estadísticas de Transferencia",
@@ -326,6 +353,7 @@
   "unknown": "Desconocido",
   "unlimited": "Ilimitado",
   "update": "Actualizar",
+  "upload": "Subida",
   "uploadLimit": "Límite de Subida",
   "uploadSpeed": "Velocidad de Subida",
   "uploadSpeedAvg": "Velocidad de Subida (Prom.)",
