--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -17,10 +17,12 @@
   "allTorrents": "Tous les Torrents",
   "anErrorOccurred": "Une erreur s'est produite",
   "analytics": "Analytiques",
+  "andFiles": " et fichiers",
   "appName": "qBitConnect",
   "appTitle": "qBitConnect",
   "applyFilter": "Appliquer le Filtre",
   "areYouSureDeleteServer": "Êtes-vous sûr de vouloir supprimer",
+  "areYouSureDeleteTorrents": "Êtes-vous sûr de vouloir supprimer {count} torrent(s)?",
   "authenticationRequired": "Authentification requise",
   "authenticationRequiredMessage": "Cette instance qBittorrent nécessite une authentification. Veuillez fournir un nom d'utilisateur et un mot de passe.",
   "autoTmm": "Auto TMM",
@@ -42,6 +44,7 @@
   "chooseLanguage": "Choisir la Langue",
   "chooseTheme": "Choisir le Thème",
   "chooseWhatToDelete": "Choisissez quoi supprimer.",
+  "collectingData": "Collecte de données...",
   "comment": "Commentaire",
   "completed": "Terminé",
   "completedTorrents": "Torrents Terminés",
@@ -64,17 +67,24 @@
   "customizeTorrentCardInfo": "Personnaliser les Informations de la Carte Torrent",
   "darkTheme": "Thème Sombre",
   "darkThemeDescription": "Thème sombre confortable avec un bon contraste",
+  "dataTransfer": "Transfert de Données",
   "defaultStatusFilter": "Filtre de Statut par Défaut",
   "delete": "Supprimer",
   "deleteLastServer": "Supprimer le Dernier Serveur",
+  "deleteOperationFailed": "Opération de suppression échouée",
+  "deleteOptions": "Options de Suppression",
   "deleteServer": "Supprimer le Serveur",
   "deleteTorrent": "Supprimer le Torrent",
+  "deleteTorrents": "Supprimer les Torrents",
   "deleted": "supprimé",
+  "deletingTorrents": "Suppression des torrents...",
   "disconnect": "Se déconnecter",
   "disconnectFirstToDelete": "Se déconnecter d'abord pour supprimer",
   "doNotDownload": "Ne pas télécharger",
   "dontCreateSubfolder": "Ne pas créer de sous-dossier",
+  "download": "Téléchargement",
   "downloadFirstLast": "Télécharger d'abord les premiers et derniers fragments",
+  "downloadProgress": "Progression du Téléchargement",
   "downloadLimit": "Limite de Téléchargement",
   "downloadSequential": "Télécharger dans l'ordre séquentiel",
   "downloadSpeed": "Vitesse de Téléchargement",
@@ -166,6 +176,8 @@
   "noNetworkConnection": "Aucune connexion réseau disponible. Veuillez vérifier votre connexion internet et réessayer.",
   "noOptionsSelected": "Aucune option sélectionnée",
   "noServers": "Aucun Serveur",
+  "noServersAvailable": "Aucun serveur disponible",
+  "noStatsDataAvailable": "Aucune donnée de statistiques disponible",
   "noTorrentsFound": "Aucun torrent trouvé",
   "noTorrentsMatchSearch": "Aucun torrent ne correspond à votre recherche",
   "none": "Aucun",
@@ -175,6 +187,7 @@
   "ok": "OK",
   "oledTheme": "Thème OLED",
   "oledThemeDescription": "Thème noir véritable pour les écrans OLED",
+  "operationFailed": "Opération échouée",
   "original": "Original",
   "overview": "Aperçu",
   "password": "Mot de passe",
@@ -182,12 +195,14 @@
   "pathOptional": "Chemin (optionnel)",
   "pause": "Pause",
   "paused": "En pause",
+  "pending": "En attente",
   "pausedTorrents": "Torrents en Pause",
   "peakDownloadSpeed": "Vitesse de Pointe de Téléchargement",
   "peakUploadSpeed": "Vitesse de Pointe de Téléversement",
   "peers": "Pairs",
   "peersConnected": "Pairs Connectés",
   "performanceMetrics": "Métriques de Performance",
+  "performingOperation": "Exécution de l'opération {operation}...",
   "pieceSize": "Taille de Pièce",
   "pieces": "Pièces",
   "pleaseEnterAtLeastOneUrl": "Veuillez entrer au moins une URL",
@@ -203,6 +218,7 @@
   "qbittorrentVersion": "qBittorrent",
   "queued": "En file",
   "queuedIoJobs": "Travaux I/O en File",
+  "quickStats": "Statistiques Rapides",
   "ratio": "Ratio",
   "readCacheHits": "Succès du Cache de Lecture",
   "readCacheOverload": "Surcharge du Cache de Lecture",
@@ -231,7 +247,9 @@
   "seeds": "Seeds",
   "select": "Sélectionner",
   "selectAll": "Tout sélectionner",
+  "selectReplacementServer": "Sélectionner un Serveur de Remplacement",
   "selectUpToOptionsToDisplay": "Sélectionnez jusqu'à {max} options à afficher dans les cartes torrent. Actuellement sélectionné : {current}/{max}",
+  "selectedServerNotAvailable": "Le serveur sélectionné n'est pas disponible. Veuillez sélectionner un autre serveur.",
   "sequentialDownload": "Téléchargement Séquentiel",
   "serverDeleted": "supprimé",
   "serverDeletedReplacementSet": "supprimé. défini comme auto-connexion",
@@ -239,6 +257,7 @@
   "serverName": "Nom du Serveur",
   "serverNameHint": "ex., NAS domestique",
   "serverNameOptional": "Nom du serveur (optionnel)",
+  "serverSetAsAutoConnect": "est configuré en auto-connexion. Veuillez sélectionner un serveur de remplacement avant de supprimer:",
   "servers": "Serveurs",
   "sessionWaste": "Gaspillage de Session",
   "setAsAutoConnect": "Définir comme Auto-Connexion",
@@ -263,6 +282,7 @@
   "showsTotalUploadedData": "Affiche les données totales téléversées",
   "showsUploadDownloadRatio": "Affiche le ratio téléversement/téléchargement",
   "size": "Taille",
+  "skip": "Ignorer",
   "skipHashCheck": "Ignorer la vérification de hachage",
   "sort": "Trier",
   "sortAndFilter": "Trier et Filtrer",
@@ -280,6 +300,10 @@
   "stopCondition": "Condition d'arrêt",
   "success": "Succès",
   "successfullyAddedTorrents": "Torrent(s) ajouté(s) avec succès",
+  "successfullyDeleted": "Supprimé avec succès {count} torrents",
+  "successfullyPaused": "Pausé avec succès {count} torrents",
+  "successfullyResumed": "Repris avec succès {count} torrents",
+  "switchServer": "Changer de Serveur",
   "systemTheme": "Thème Système",
   "systemThemeDescription": "Suit le thème système de votre appareil",
   "tags": "Étiquettes",
@@ -288,7 +312,9 @@
   "technicalInformation": "Informations Techniques",
   "termsConditions": "Termes et Conditions",
   "theme": "Thème",
+  "thisActionCannotBeUndone": "Cette action ne peut pas être annulée.",
   "tier": "Niveau",
+  "timeActive": "Temps Actif",
   "timeElapsed": "Temps Écoulé",
   "timeline": "Chronologie",
   "torrentAndFiles": "Torrent + fichiers",
@@ -302,7 +328,7 @@
   "torrentMovedToBottomOfQueue": "Torrent déplacé à la fin de la file",
   "torrentMovedToTopOfQueue": "Torrent déplacé au début de la file",
   "torrentMovedUpInQueue": "Torrent déplacé vers le haut dans la file",
-  "torrentOnly": "Torrent seulement",
+  "torrentOnly": "Torrent Seulement",
   "torrentOptions": "Options Torrent",
   "torrentRecheckStarted": "Vérification du torrent démarrée",
   "torrentRenamedSuccessfully": "Torrent renommé avec succès",
@@ -319,6 +345,7 @@
   "totalWasted": "Total Gaspillé",
   "tracker": "Tracker",
   "trackers": "Trackers",
+  "transferInfo": "Informations de Transfert",
   "transferInformation": "Informations de Transfert",
   "transferSpeeds": "Vitesses de Transfert",
   "transferStatistics": "Statistiques de Transfert",
@@ -326,6 +353,7 @@
   "unknown": "Inconnu",
   "unlimited": "Illimité",
   "update": "Mettre à jour",
+  "upload": "Téléversement",
   "uploadLimit": "Limite de Téléversement",
   "uploadSpeed": "Vitesse de Téléversement",
   "uploadSpeedAvg": "Vitesse de Téléversement (Moy.)",
