FIX - Statistics page issue

--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -111,6 +111,11 @@
   "failedToDeleteTorrent": "Torrent-Löschung fehlgeschlagen",
   "failedToLoadServers": "Laden der Server fehlgeschlagen. Bitte versuchen Sie es erneut.",
   "failedToLoadStatistics": "Statistiken konnten nicht geladen werden",
+  "statisticsLoadError": "Statistiken können derzeit nicht geladen werden. Bitte versuchen Sie es später erneut.",
+  "statisticsNetworkError": "Netzwerkverbindungsproblem. Bitte überprüfen Sie Ihre Internetverbindung und versuchen Sie es erneut.",
+  "statisticsDataError": "Statistikdaten können nicht verarbeitet werden. Bitte aktualisieren Sie und versuchen Sie es erneut.",
+  "statisticsTimeoutError": "Das Laden der Statistiken dauert länger als erwartet. Bitte versuchen Sie es erneut.",
+  "statisticsPartialDataError": "Einige Statistiken können aufgrund von Verbindungsproblemen unvollständig sein.",
   "failedToMoveTorrent": "Torrent konnte nicht verschoben werden",
   "failedToRename": "Umbenennung fehlgeschlagen",
   "fileSize": "Dateigröße",
