--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -112,6 +112,11 @@
   "failedToDeleteTorrent": "Failed to delete torrent",
   "failedToLoadServers": "Failed to load servers. Please try again.",
   "failedToLoadStatistics": "Failed to load statistics",
+  "statisticsLoadError": "Unable to load statistics at this time. Please try again later.",
+  "statisticsNetworkError": "Network connection issue. Please check your internet connection and try again.",
+  "statisticsDataError": "Unable to process statistics data. Please refresh and try again.",
+  "statisticsTimeoutError": "Loading statistics is taking longer than expected. Please try again.",
+  "statisticsPartialDataError": "Some statistics may be incomplete due to connection issues.",
   "failedToMoveTorrent": "Failed to move torrent",
   "failedToRename": "Failed to rename",
   "fileSize": "File size",
