--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -111,6 +111,11 @@
   "failedToDeleteTorrent": "Error al eliminar torrent",
   "failedToLoadServers": "Error al cargar servidores. Por favor inténtalo de nuevo.",
   "failedToLoadStatistics": "Error al cargar estadísticas",
+  "statisticsLoadError": "No se pueden cargar las estadísticas en este momento. Por favor, inténtelo de nuevo más tarde.",
+  "statisticsNetworkError": "Problema de conexión de red. Por favor, verifique su conexión a Internet e inténtelo de nuevo.",
+  "statisticsDataError": "No se pueden procesar los datos de estadísticas. Por favor, actualice e inténtelo de nuevo.",
+  "statisticsTimeoutError": "La carga de estadísticas está tardando más de lo esperado. Por favor, inténtelo de nuevo.",
+  "statisticsPartialDataError": "Algunas estadísticas pueden estar incompletas debido a problemas de conexión.",
   "failedToMoveTorrent": "Error al mover torrent",
   "failedToRename": "Error al renombrar",
   "fileSize": "Tamaño del archivo",
