--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -111,6 +111,11 @@
   "failedToDeleteTorrent": "Échec de la suppression du torrent",
   "failedToLoadServers": "Échec du chargement des serveurs. Veuillez réessayer.",
   "failedToLoadStatistics": "Échec du chargement des statistiques",
+  "statisticsLoadError": "Impossible de charger les statistiques pour le moment. Veuillez réessayer plus tard.",
+  "statisticsNetworkError": "Problème de connexion réseau. Veuillez vérifier votre connexion Internet et réessayer.",
+  "statisticsDataError": "Impossible de traiter les données de statistiques. Veuillez actualiser et réessayer.",
+  "statisticsTimeoutError": "Le chargement des statistiques prend plus de temps que prévu. Veuillez réessayer.",
+  "statisticsPartialDataError": "Certaines statistiques peuvent être incomplètes en raison de problèmes de connexion.",
   "failedToMoveTorrent": "Échec du déplacement du torrent",
   "failedToRename": "Échec du renommage",
   "fileSize": "Taille du fichier",
