UPDATE - Translations json

--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -10,6 +10,7 @@
   "addTorrentFile": "Torrent-Datei hinzufügen",
   "addTorrentUrl": "Torrent-URL hinzufügen",
   "addViaUrl": "Via URL hinzufügen",
+  "addedDate": "Hinzufügungsdatum",
   "additionDate": "Hinzufügungsdatum",
   "allTimeDownload": "Gesamte Downloads",
   "allTimeShareRatio": "Gesamte Share-Ratio",
@@ -17,7 +18,7 @@
   "allTorrents": "Alle Torrents",
   "anErrorOccurred": "Ein Fehler ist aufgetreten",
   "analytics": "Analytik",
-  "andFiles": " und Dateien",
+  "andFiles": "und Dateien",
   "appName": "qBitConnect",
   "appTitle": "qBitConnect",
   "applyFilter": "Filter anwenden",
@@ -25,7 +26,7 @@
   "areYouSureDeleteTorrents": "Sind Sie sicher, dass Sie {count} Torrent(s) löschen möchten?",
   "authenticationRequired": "Authentifizierung erforderlich",
   "authenticationRequiredMessage": "Diese qBittorrent-Instanz erfordert Authentifizierung. Bitte geben Sie Benutzername und Passwort an.",
-  "autoTmm": "Auto TMM",
+  "autoTmm": "Automatisches TMM",
   "automatic": "Automatisch",
   "automaticallyRefreshTorrentList": "Torrent-Liste automatisch aktualisieren",
   "availableOptions": "Verfügbare Optionen",
@@ -82,7 +83,7 @@
   "disconnectFirstToDelete": "Zuerst trennen, um zu löschen",
   "doNotDownload": "Nicht herunterladen",
   "dontCreateSubfolder": "Keinen Unterordner erstellen",
-  "download": "Download",
+  "download": "Herunterladen",
   "downloadFirstLast": "Erste und letzte Teile zuerst herunterladen",
   "downloadProgress": "Download-Fortschritt",
   "downloadLimit": "Download-Limit",
