--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -10,6 +10,7 @@
   "addTorrentFile": "Agregar Archivo Torrent",
   "addTorrentUrl": "Agregar URL de Torrent",
   "addViaUrl": "Agregar via URL",
+  "addedDate": "Fecha de Adición",
   "additionDate": "Fecha de Adición",
   "allTimeDownload": "Descarga Total",
   "allTimeShareRatio": "Ratio de Compartir Total",
@@ -17,7 +18,7 @@
   "allTorrents": "Todos los Torrents",
   "anErrorOccurred": "Ocurrió un error",
   "analytics": "Analíticas",
-  "andFiles": " y archivos",
+  "andFiles": "y archivos",
   "appName": "qBitConnect",
   "appTitle": "qBitConnect",
   "applyFilter": "Aplicar Filtro",
@@ -25,7 +26,7 @@
   "areYouSureDeleteTorrents": "¿Estás seguro de que quieres eliminar {count} torrent(s)?",
   "authenticationRequired": "Autenticación requerida",
   "authenticationRequiredMessage": "Esta instancia de qBittorrent requiere autenticación. Por favor proporciona nombre de usuario y contraseña.",
-  "autoTmm": "Auto TMM",
+  "autoTmm": "TMM Automático",
   "automatic": "Automático",
   "automaticallyRefreshTorrentList": "Actualizar automáticamente la lista de torrents",
   "availableOptions": "Opciones Disponibles",
