--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -10,6 +10,7 @@
   "addTorrentFile": "Ajouter Fichier Torrent",
   "addTorrentUrl": "Ajouter URL Torrent",
   "addViaUrl": "Ajouter via URL",
+  "addedDate": "Date d'Ajout",
   "additionDate": "Date d'Ajout",
   "allTimeDownload": "Téléchargement Total",
   "allTimeShareRatio": "Ratio de Partage Total",
@@ -17,7 +18,7 @@
   "allTorrents": "Tous les Torrents",
   "anErrorOccurred": "Une erreur s'est produite",
   "analytics": "Analytiques",
-  "andFiles": " et fichiers",
+  "andFiles": "et fichiers",
   "appName": "qBitConnect",
   "appTitle": "qBitConnect",
   "applyFilter": "Appliquer le Filtre",
@@ -25,7 +26,7 @@
   "areYouSureDeleteTorrents": "Êtes-vous sûr de vouloir supprimer {count} torrent(s)?",
   "authenticationRequired": "Authentification requise",
   "authenticationRequiredMessage": "Cette instance qBittorrent nécessite une authentification. Veuillez fournir un nom d'utilisateur et un mot de passe.",
-  "autoTmm": "Auto TMM",
+  "autoTmm": "TMM Automatique",
   "automatic": "Automatique",
   "automaticallyRefreshTorrentList": "Actualiser automatiquement la liste des torrents",
   "availableOptions": "Options Disponibles",
